==> RT-Thread/rt-thread/bsp/gd32vf103v-longan/drivers/drv_gpio.c <==
#include <rtthread.h>
#include <rtdevice.h>
#include "drv_gpio.h"
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])

static void gd32_pin_mode(struct rt_device *device, rt_base_t pin, rt_base_t mode)
{
    const struct pin_index *index;

    index = get_pin(pin);
    if (index == RT_NULL)
    {
        return;
    }

    if (mode == PIN_MODE_OUTPUT)
    {
        /* output setting */
        gpio_init(index->gpio, GPIO_MODE_OUT_PP, GPIO_OSPEED_50MHZ, index->pin);
    }
    else if (mode == PIN_MODE_OUTPUT_OD)
    {
        /* output setting: od. */
        gpio_init(index->gpio, GPIO_MODE_OUT_OD, GPIO_OSPEED_50MHZ, index->pin);
    }
    else if (mode == PIN_MODE_INPUT)
    {
        /* input setting: not pull. */
        gpio_init(index->gpio, GPIO_MODE_IN_FLOATING, GPIO_OSPEED_50MHZ, index->pin);
    }
    else if (mode == PIN_MODE_INPUT_PULLUP)
    {
        /* input setting: pull up. */
        gpio_init(index->gpio, GPIO_MODE_IPU, GPIO_OSPEED_50MHZ, index->pin);
    }
    else if (mode == PIN_MODE_INPUT_PULLDOWN)
    {
        /* input setting: pull down. */
        gpio_init(index->gpio, GPIO_MODE_IPD, GPIO_OSPEED_50MHZ, index->pin);
    }
}

static void gd32_pin_write(struct rt_device *device, rt_base_t pin, rt_base_t value)
{
    const struct pin_index *index;

    index = get_pin(pin);
    if (index == RT_NULL)
    {
        return;
    }

    gpio_bit_write(index->gpio, index->pin, (bit_status) value);
}
